--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.22",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
   },
